--- a/pemesanan/src/main/resources/static/assets/css/demo.css
+++ b/pemesanan/src/main/resources/static/assets/css/demo.css
@@ -272,10 +272,13 @@ body[data-background-color="dark"] .demo-icon .icon-class {
 }
 
 .card .produk{
-   display: grid;
+   /*display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-gap: 5px;
-    grid-auto-rows: minmax(50px, auto);
+    grid-auto-rows: minmax(50px, auto);*/
+    display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+      grid-gap: 1em;
    
 }
 
@@ -333,9 +336,8 @@ body[data-background-color="dark"] .demo-icon .icon-class {
 
 
 .card .produk img{
-
-    width:100px;
-    height:100px;
+    width:50px;
+    height:80px;
  }
 
 .tblukuran{
