--- a/pemesanan/src/main/resources/templates/tables/showproductunlogin2.html
+++ b/pemesanan/src/main/resources/templates/tables/showproductunlogin2.html
@@ -194,9 +194,9 @@
                                 <div class="col-xl-4">
                                     <div class="card">
                                         <!--<div class="card-body"><code>.col-xl-4</code></div>-->
-                                        <td> <img th:src="'../resources/static/upload/' +${products.fileName}" alt="" width="170px" height="170px"></td>
-                                        <td align="center"><a th:href="@{/product/detail/{id} (id=${products.id_product})}"/> <u th:text="${products.productName}"></u></a></td>
-                                        <td align="center" th:text="${products.price}"></td>
+                                        <td> <img th:src="'../resources/static/upload/' +${products.fileName}" alt="" ></td>
+                                        <td ><a th:href="@{/product/detail/{id} (id=${products.id_product})}"/> <u th:text="${products.productName}"></u></a></td>
+                                        <td th:text="${products.price}"></td>
                                     </div>
                                 </div>
 
